--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,18 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    @apply bg-theme-gray-50;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-theme-green-100;
+  }
 }
  
 @layer base {
