--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,31 @@
     --ring: 212.7 26.8% 83.9%;
   }
 
+  h1{
+    font-size: 2rem;
+    font-weight: 300
+  }
+
+  h2{
+    font-size: 1.5rem;
+    font-weight: 500
+  }
+
+  h3{
+    font-size: 1.25rem;
+    font-weight: 300
+  }
+
+  label{
+    font-size: 0.875rem;
+    font-weight: 500
+  }
+
+  p{
+    font-size: 0.75rem;
+    font-weight: 300
+  }
+
   ::-webkit-scrollbar {
     width: 8px;
   }
